# Mergedoc-Generator

./: Quick_Start.md  README.md  pyproject.toml  requirements.txt
mergedoc_generator/: __init__.py  __main__.py  _version.py  cli.py
mergedoc_generator/core/: __init__.py  base.py  data_loader.py  pdf_builder.py  position_converter.py  registry.py
mergedoc_generator/document_types/: __init__.py  invoice.py  layout_demo.py  sales_order.py
