[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mergedoc_generator"
dynamic = ["version"]
description = "Generate professional PDF documents from data sources with repeating sections and complex layouts"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "RedBearAK", email = "64876997+RedBearAK@users.noreply.github.com"}
]
maintainers = [
    {name = "RedBearAK", email = "64876997+RedBearAK@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]
keywords = ["pdf", "invoice", "document", "generator", "mail-merge"]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "reportlab>=3.6.0",
    "PyPDF2>=3.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/RedBearAK/Mergedoc-Generator"
Documentation = "https://github.com/RedBearAK/Mergedoc-Generator#readme"
Repository = "https://github.com/RedBearAK/Mergedoc-Generator.git"
"Bug Tracker" = "https://github.com/RedBearAK/Mergedoc-Generator/issues"

[project.scripts]
mergedoc = "mergedoc_generator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mergedoc_generator*"]

[tool.setuptools.dynamic]
version = {attr = "mergedoc_generator._version.__version__"}

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
